syntax = "proto3";

package bytebase.store;

import "google/protobuf/duration.proto";
import "google/type/expr.proto";

option go_package = "generated-go/store";

message Policy {
  enum Type {
    TYPE_UNSPECIFIED = 0;
    ROLLOUT = 1;
    MASKING_EXCEPTION = 2;
    QUERY_DATA = 5;
    MASKING_RULE = 6;
    IAM = 8;
    TAG = 9;
    DATA_SOURCE_QUERY = 10;
  }

  enum Resource {
    RESOURCE_UNSPECIFIED = 0;
    WORKSPACE = 1;
    ENVIRONMENT = 2;
    PROJECT = 3;
  }
}

message RolloutPolicy {
  bool automatic = 1;
  repeated string roles = 2;
  // Checkers that must pass before rollout execution.
  // These checks are performed in UI workflows only.
  Checkers checkers = 4;

  message Checkers {
    // Whether issue approval is required before proceeding with rollout.
    bool required_issue_approval = 1;

    // Status checks that must pass before rollout can be executed.
    RequiredStatusChecks required_status_checks = 2;

    message RequiredStatusChecks {
      // Enforcement level for plan check results during rollout validation.
      PlanCheckEnforcement plan_check_enforcement = 1;
    }

    enum PlanCheckEnforcement {
      // Allow rollout regardless of plan check results (no enforcement).
      PLAN_CHECK_ENFORCEMENT_UNSPECIFIED = 0;

      // Block rollout only when plan check finds errors.
      ERROR_ONLY = 1;

      // Block rollout when plan check finds errors or warnings.
      STRICT = 2;
    }
  }
}

// MaskingExceptionPolicy is the allowlist of users who can access sensitive data.
message MaskingExceptionPolicy {
  message MaskingException {
    enum Action {
      ACTION_UNSPECIFIED = 0;
      QUERY = 1;
      EXPORT = 2;
    }
    // action is the action by which the user can access sensitive data.
    Action action = 1;

    // Member is the principal who binds to this exception policy instance.
    //
    // Format: users/{email} or groups/{group email}
    string member = 4;

    // The condition that is associated with this exception policy instance.
    google.type.Expr condition = 5;
  }

  repeated MaskingException masking_exceptions = 1;
}

message MaskingRulePolicy {
  message MaskingRule {
    // A unique identifier for a node in UUID format.
    string id = 1;

    google.type.Expr condition = 2;

    string semantic_type = 3;
  }
  repeated MaskingRule rules = 1;
}

message TagPolicy {
  // tags is the key-value map for resources.
  // For example, the environment resource can have the SQL review config tag, such as "bb.tag.review_config": "reviewConfigs/{review config resource id}".
  map<string, string> tags = 1;
}

message Binding {
  // The role that is assigned to the members.
  // Format: roles/{role}
  string role = 1;

  // Specifies the principals requesting access for a Bytebase resource.
  // For users, the member should be: users/{email}
  // For groups, the member should be: groups/{email}
  repeated string members = 2;

  // The condition that is associated with this binding.
  // If the condition evaluates to true, then this binding applies to the current request.
  // If the condition evaluates to false, then this binding does not apply to the current request. However, a different role binding might grant the same role to one or more of the principals in this binding.
  google.type.Expr condition = 3;
}

message IamPolicy {
  // Collection of binding.
  // A binding binds one or more members or groups to a single role.
  repeated Binding bindings = 1;
}

// EnvironmentTierPolicy is the tier of an environment.
message EnvironmentTierPolicy {
  enum EnvironmentTier {
    ENVIRONMENT_TIER_UNSPECIFIED = 0;
    PROTECTED = 1;
    UNPROTECTED = 2;
  }

  EnvironmentTier environment_tier = 1;
  string color = 2;
}

// QueryDataPolicy is the policy configuration for querying data.
message QueryDataPolicy {
  // The query timeout duration.
  google.protobuf.Duration timeout = 1;

  // Disable exporting data in the SQL editor.
  bool disable_export = 2;

  // The size limit in bytes.
  // The default value is 100MB, we will use the default value if the setting not exists, or the limit <= 0.
  int64 maximum_result_size = 3;

  // The return rows limit.
  // The default value is -1, means no limit.
  int32 maximum_result_rows = 4;

  // Disable copying data.
  bool disable_copy_data = 5;
}

// DataSourceQueryPolicy is the policy configuration for running statements in the SQL editor.
message DataSourceQueryPolicy {
  enum Restriction {
    RESTRICTION_UNSPECIFIED = 0;
    // Allow to query admin data sources when there is no read-only data source.
    FALLBACK = 1;
    // Disallow to query admin data sources.
    DISALLOW = 2;
  }
  Restriction admin_data_source_restriction = 1;

  // Disallow running DDL statements in the SQL editor.
  bool disallow_ddl = 2;
  // Disallow running DML statements in the SQL editor.
  bool disallow_dml = 3;
}
